# image_retrieval

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/image_retrieval/: main.py  mongo.py
